@@ -9,11 +9,13 @@ eglibc (2.9-24) UNRELEASED; urgency=low
   * Don't access dpkg files directly in libc6.preinst.
   * patches/any/local-ld-multiarch.diff: convert i586 and i686 into i486
     (Closes: bug#540646).
+  * debian/rules.d/debhelper.mk: use dh_lintian instead doing the work
+    manually.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 2696 (from glibc-bsd).
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 09 Aug 2009 21:12:43 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 09 Aug 2009 21:48:02 +0200
 
 eglibc (2.9-23) unstable; urgency=low
 
